# MyChatClient

./: CMakeLists.txt  backgroundwidget.cpp  backgroundwidget.h  businesswidget.cpp  businesswidget.h  businesswidget.ui  clientwindow.cpp  clientwindow.h  clientwindow.ui  globalstorage.cpp  globalstorage.h  log.txt  loginwidget.cpp  loginwidget.h  loginwidget.ui  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  myconfig.cpp  myconfig.h  networkmanager.cpp  networkmanager.h  registerwnd.cpp  registerwnd.h  settingswnd.cpp  settingswnd.h  showtext.cpp  showtext.h
base/: clicklabel.cpp  clicklabel.h  emojipicker.cpp  emojipicker.h  mybutton.cpp  mybutton.h  mywindow.cpp  mywindow.h  roundlabel.cpp  roundlabel.h  searchbar.cpp  searchbar.h
chatsession/: cell.cpp  cell.h  cellviewdad.cpp  cellviewdad.h  cellviewson.cpp  cellviewson.h  floatingscrollbar.cpp  floatingscrollbar.h  listwidget.cpp  listwidget.h
chatwindow/: bubbleinfo.cpp  bubbleinfo.h  bubbleitemwidget.cpp  bubbleitemwidget.h  chatwindow.cpp  chatwindow.h  chatwindow.ui  qnchatmessage.cpp  qnchatmessage.h
clientapi/: myapplication.cpp  myapplication.h  screenwidget.cpp  screenwidget.h  status.h
leftmenu/: addfriendwnd.cpp  addfriendwnd.h  addsubgroup.cpp  addsubgroup.h  contactslistwidget.cpp  contactslistwidget.h  creategroupwnd.cpp  creategroupwnd.h  findfriendwnd.cpp  findfriendwnd.h  leftbar.cpp  leftbar.h
lib/: myresource.qrc
sqlite/: sqldatabase.cpp  sqldatabase.h
